--- a/WPF/Tablet/Views/TourStatsPage.xaml
+++ b/WPF/Tablet/Views/TourStatsPage.xaml
@@ -45,6 +45,7 @@
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="2*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
             <Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Margin="10" BorderBrush="Black" BorderThickness="1">
@@ -100,6 +101,8 @@
                 <TextBlock Grid.Row="2" FontSize="18" Margin="10" Text="{Binding mid, StringFormat=Between 18 and 50 years:      {0}}"/>
                 <TextBlock Grid.Row="3" FontSize="18" Margin="10" Text="{Binding old, StringFormat=Over 50 years:      {0}}"/>
             </Grid>
+            <Button x:Name="closeButton" Grid.Row="8" Grid.Column="1" Content="Close" VerticalAlignment="Center" HorizontalAlignment="Center"  Padding="10" Click="closeButton_Click"/>
+
         </Grid>
     </Grid>
 </Page>
