--- a/WPF/SignInForm.xaml
+++ b/WPF/SignInForm.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="BookingApp.View.SignInForm"
+﻿<Window x:Class="BookingApp.WPF.SignInForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BookingApp.View"
+        xmlns:local="clr-namespace:BookingApp.WPF"
         mc:Ignorable="d"
         Title="Sign in" Height="250" Width="450" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
@@ -30,7 +30,7 @@
             <PasswordBox Name="txtPassword" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center"/>
         </Grid>
         
-        <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="60"/>
+        <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="80"/>
 
     </Grid>
 </Window>
