--- a/WPF/SignInForm.xaml
+++ b/WPF/SignInForm.xaml
@@ -26,8 +26,8 @@
 
             <Label Grid.Row="0" Grid.Column="0" Height="30">Username:</Label>
             <Label Grid.Row="1" Grid.Column="0" Height="30">Password:</Label>
-            <TextBox Grid.Row="0" Text="{Binding Path=Username, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Height="25" TextWrapping="Wrap" VerticalAlignment="Center"/>
-            <PasswordBox Name="txtPassword" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center"/>
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Username, Mode=OneWayToSource}" Height="25" TextWrapping="Wrap" VerticalAlignment="Center"/>
+            <PasswordBox x:Name="passwordBox" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center"/>
         </Grid>
         
         <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="80"/>
