--- a/WPF/Web/Views/AccommodationCard.xaml
+++ b/WPF/Web/Views/AccommodationCard.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Loaded="UserControlLoaded">
 
     <UserControl.Resources>
 
@@ -23,7 +24,7 @@
         
     </UserControl.Resources>
     
-    <Border Margin="5 5 5 5" Background="White" BorderBrush="Gray" BorderThickness="1" Width="350" CornerRadius="10">
+    <Border x:Name="borderCorner" Margin="5 5 5 5" Background="White" BorderBrush="LightGray" BorderThickness="2" Width="350" CornerRadius="10">
         <Grid MouseLeftButtonDown="AccommodationCardClick">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="138"/>
@@ -35,13 +36,13 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Border Background="LightGray" Grid.ColumnSpan="2" Grid.Row="0" BorderThickness="2" Width="350" CornerRadius="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <TextBlock Grid.Row="0" FontSize="18" Margin="0 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Name}"/>
+            <Border x:Name="borderHeader" Background="LightGray" Grid.ColumnSpan="2" Grid.Row="0" BorderThickness="2" Width="350" CornerRadius="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <TextBlock Grid.Row="0" FontSize="18" Margin="0 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Accommodation.Name}"/>
             </Border>
 
             <Border Grid.Column="0" Grid.Row="1" Height="128" Width="128" CornerRadius="10" Margin="10 0 0 0">
                 <Border.Background>
-                    <ImageBrush ImageSource="{Binding ProfilePictures[0]}" Stretch="Fill"/>
+                    <ImageBrush ImageSource="{Binding Accommodation.ProfilePictures[0]}" Stretch="Fill"/>
                 </Border.Background>
             </Border>
 
@@ -56,28 +57,28 @@
                 <Label Grid.Row="0">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="{StaticResource LocationIcon}"/>
-                        <TextBlock HorizontalAlignment="Left" Text="{Binding Location.LocationInfoTemplate}"/>
+                        <TextBlock HorizontalAlignment="Left" Text="{Binding Accommodation.Location.LocationInfoTemplate}"/>
                     </StackPanel>
                 </Label>
 
                 <Label Grid.Row="1">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="{StaticResource HouseIcon}"/>
-                        <TextBlock Text="{Binding Type}"/>
+                        <TextBlock Text="{Binding Accommodation.Type}"/>
                     </StackPanel>
                 </Label>
 
                 <Label Grid.Row="2">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="{StaticResource CalendarIcon}"/>
-                        <TextBlock Text="{Binding MinReservationDays, StringFormat=Minimum days: {0}}"/>
+                        <TextBlock Text="{Binding Accommodation.MinReservationDays, StringFormat=Minimum days: {0}}"/>
                     </StackPanel>
                 </Label>
 
                 <Label Grid.Row="3">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="{StaticResource PeopleIcon}"/>
-                        <TextBlock Text="{Binding MaxGuestNumber, StringFormat=Capacity: {0}}"/>
+                        <TextBlock Text="{Binding Accommodation.MaxGuestNumber, StringFormat=Capacity: {0}}"/>
                     </StackPanel>
                 </Label>
                 
