--- a/WPF/Android/Views/AccommodationPage.xaml
+++ b/WPF/Android/Views/AccommodationPage.xaml
@@ -60,35 +60,46 @@
             </Button>
         </Grid>
         <Border Grid.Row="0" BorderBrush="Black" BorderThickness="0,0,0,2">
-            <ScrollViewer Height="500" Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalScrollBarVisibility="Hidden">
-                <ItemsControl Height="900" ItemsSource="{Binding AccommodationDTOs}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border Background="#FFFCF5" BorderBrush="Black" BorderThickness="1" Height="110" CornerRadius="20">
-                                <Grid Margin="20,10,10,10" VerticalAlignment="Center">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
+            <ListBox Height="500" Width="400" ItemsSource="{Binding AccommodationDTOs}" SelectedItem="{Binding SelectedAccommodation}" 
+             ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden"
+             HorizontalContentAlignment="Stretch">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Border Background="#FFFCF5" BorderBrush="Black" BorderThickness="1" Height="110" CornerRadius="20" Width="380">
+                            <Grid Margin="20,10,10,10" VerticalAlignment="Center">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="100"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
 
-                                    <Image Source="{Binding ProfilePictures[0]}" Grid.Column="0" Height="100" Width="100" SnapsToDevicePixels="True"/>
+                                <Image Source="{Binding ProfilePictures[0]}" Grid.Column="0" Height="100" Width="100" SnapsToDevicePixels="True"/>
 
-                                    <Grid Grid.Column="1" Margin="20" VerticalAlignment="Center" HorizontalAlignment="Left">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="2*"/>
-                                            <RowDefinition Height="*"/>
-                                        </Grid.RowDefinitions>
-                                        <TextBlock Text="{Binding Name}" Grid.Row="0" 
-                                                   FontSize="18" FontFamily="Global Sans Serif" Foreground="Black" VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
-                                        <TextBlock Text="{Binding DisplayLocation}" Grid.Row="1" FontSize="14" FontFamily="Global Sans Serif" Foreground="Black"
-                                                   VerticalAlignment="Top" HorizontalAlignment="Left"/>
-                                    </Grid>
+                                <Grid Grid.Column="1" Margin="20" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="2*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Text="{Binding Name}" Grid.Row="0" 
+                                       FontSize="18" FontFamily="Global Sans Serif" Foreground="Black" VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
+                                    <TextBlock Text="{Binding DisplayLocation}" Grid.Row="1" FontSize="14" FontFamily="Global Sans Serif" Foreground="Black"
+                                       VerticalAlignment="Top" HorizontalAlignment="Left"/>
                                 </Grid>
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
+                            </Grid>
+                        </Border>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="LightBlue"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
         </Border>
+
+
     </Grid>
 </Page>
