refac: Moved Commands and Converters to WPF.Utils folder
- Fixed namepsaces in XAML files
- Ran code cleanup on solution

--- a/WPF/Android/Views/NotificationsPage.xaml
+++ b/WPF/Android/Views/NotificationsPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookingApp.WPF.Android.Views"
-      xmlns:converters="clr-namespace:BookingApp.Converters"
+      xmlns:converters="clr-namespace:BookingApp.WPF.Utils.Converters"
       mc:Ignorable="d" 
       d:DesignHeight="624" d:DesignWidth="430"
       Title="NotificationsPage">
