--- a/WPF/Android/Views/ReservationReviewsPage.xaml
+++ b/WPF/Android/Views/ReservationReviewsPage.xaml
@@ -24,7 +24,8 @@
                         <RowDefinition Height="60"/>
                     </Grid.RowDefinitions>
                     <Button x:Name="AssignGradeButton" Grid.Row="1" Content="Assign a Grade"
-                            Grid.Column="1" Width="120" Height="40" Click="AssignGradeButton_Click" IsEnabled="{Binding AssignGradeEnabled}">
+                            Grid.Column="1" Width="120" Height="40" Click="AssignGradeButton_Click" 
+                            IsEnabled="{Binding SelectedReservation.CanBeGradedByOwner}">
                         
                     </Button>
 
@@ -34,16 +35,16 @@
 
                     <ListView ItemsSource="{Binding ReservationCollection, UpdateSourceTrigger=PropertyChanged}"
           SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center"
-          SelectionMode="Single" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" SelectionChanged="ListView_SelectionChanged">
+          SelectionMode="Single" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Accommodation" Width="160" DisplayMemberBinding="{Binding AccommodationName}"/>
+                                <GridViewColumn Header="Accommodation" Width="160" DisplayMemberBinding="{Binding Accommodation.Name}"/>
                                 <GridViewColumn Header="Start Date" Width="80" DisplayMemberBinding="{Binding StartDate}"/>
                                 <GridViewColumn Header="End Date" Width="80" DisplayMemberBinding="{Binding EndDate}"/>
                                 <GridViewColumn Header="Graded" Width="80">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
-                                            <CheckBox IsChecked="{Binding Graded}" IsEnabled="False" HorizontalAlignment="Center"/>
+                                            <CheckBox IsChecked="{Binding IsGradedByGuest}" IsEnabled="False" HorizontalAlignment="Center"/>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
