--- a/WPF/Android/Views/AccommodationRenovationPage.xaml
+++ b/WPF/Android/Views/AccommodationRenovationPage.xaml
@@ -1,14 +1,17 @@
-﻿<Page x:Class="BookingApp.WPF.Android.Views.AccommodationRenovationPagexaml"
+﻿<Page x:Class="BookingApp.WPF.Android.Views.AccommodationRenovationPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookingApp.WPF.Android.Views"
+      xmlns:converter="clr-namespace:BookingApp.WPF.Utils.Converters"
       mc:Ignorable="d" 
       d:DesignHeight="624" d:DesignWidth="430"
       Title="AccommodationRenovationPagexaml">
     <Page.Resources>
         <BitmapImage x:Key="SearchIcon" UriSource="../../../Resources/Images/android-search-icon.png"/>
+        <converter:SelectedToEnabledConverter x:Key="SelectedConverter"/>
+
         <Style TargetType="Label" x:Key="Header1">
             <Style.Setters>
                 <Setter Property="FontSize" Value="22"/>
@@ -43,13 +46,17 @@
         <Label Content="Accommodation name" Style="{StaticResource Header1}" Grid.Row="0" Grid.ColumnSpan="5" HorizontalAlignment="Center" Margin="0,5,0,10"/>
         <Border BorderBrush="Black" BorderThickness="0,0,0,2" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="2"/>
         <Label Content="Start Date:" Style="{StaticResource Labels}" Grid.Column="1" Grid.Row="1"/>
-        <DatePicker x:Name="startDatePicker" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,0"/>
+        <DatePicker x:Name="startDatePicker" Height="30" Margin="0,15,0,0" 
+                    Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
+                    SelectedDate="{Binding StartDate}" SelectedDateChanged="startDatePicker_SelectedDateChanged"/>
 
         <Label Content="End Date:" Style="{StaticResource Labels}" Grid.Column="3" Grid.Row="1"/>
-        <DatePicker x:Name="endDatePicker" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,0"/>
+        <DatePicker x:Name="endDatePicker" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                    Height="30" Margin="0,15,0,0" SelectedDate="{Binding EndDate}" 
+                    IsEnabled="{Binding SelectedDate, ElementName=startDatePicker, Converter={StaticResource SelectedConverter}}"/>
 
         <Label Content="Duration: " Style="{StaticResource Labels}" Grid.Column="1" Grid.Row="2"/>
-        <TextBox Grid.Column="1" Grid.Row="2" Height="20" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10,0,0"/>
+        <TextBox Grid.Column="1" Grid.Row="2" Width="60" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Margin="0,15,0,0"/>
 
         <Button Grid.Column="3" Grid.Row="2" Height="50" Width="120" VerticalAlignment="Center" HorizontalAlignment="Center">
             <StackPanel Orientation="Horizontal">
@@ -58,12 +65,6 @@
             </StackPanel>
         </Button>
 
-        <Button Grid.Column="3" Grid.Row="5" Height="50" Width="120" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <Image Source="{StaticResource SearchIcon}" Height="40" Width="40"/>
-                <Label Content="Accept" Style="{StaticResource Labels}" VerticalAlignment="Center"/>
-            </StackPanel>
-        </Button>
         <Label Content="Available Dates: " Style="{StaticResource Header1}" BorderBrush="Transparent"
                HorizontalAlignment="Center"  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3"/>
         
@@ -84,7 +85,16 @@
             </ListView.ItemContainerStyle>
         </ListView>
 
-        <Button Grid.Column="1" Grid.Row="5" Height="50" Width="120" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <Button Grid.Column="3" Grid.Row="5" Height="50" Width="120" VerticalAlignment="Center" HorizontalAlignment="Center"
+        Click="AcceptButton_Click">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="{StaticResource SearchIcon}" Height="40" Width="40"/>
+                <Label Content="Accept" Style="{StaticResource Labels}" VerticalAlignment="Center"/>
+            </StackPanel>
+        </Button>
+
+        <Button Grid.Column="1" Grid.Row="5" Height="50" Width="120" VerticalAlignment="Center" HorizontalAlignment="Center"
+                Click="DeclineButton_Click">
             <StackPanel Orientation="Horizontal">
                 <Image Source="{StaticResource SearchIcon}" Height="40" Width="40"/>
                 <Label Content="Decline" Style="{StaticResource Labels}" VerticalAlignment="Center"/>
